# CMSIS_CORE_CMAKE

./: .gitignore  CMakeLists.txt  README.md
CMSIS/Core/: CMakeLists.txt
tests/: CMakeLists.txt  helpCompile.h  testcm7.c  toolchain.cmake
